openshmemdir = $(pkglibexecdir)/openshmem
openshmem_PROGRAMS = osu_oshm_get osu_oshm_put osu_oshm_put_mr osu_oshm_atomics

osu_oshm_get_SOURCES = osu_oshm_get.c osu_common.c osu_common.h
osu_oshm_put_SOURCES = osu_oshm_put.c osu_common.c osu_common.h
osu_oshm_put_mr_SOURCES = osu_oshm_put_mr.c osu_common.c osu_common.h
osu_oshm_atomics_SOURCES = osu_oshm_atomics.c osu_common.c osu_common.h
